--- a/templates/admain.html
+++ b/templates/admain.html
@@ -106,7 +106,7 @@
             <dt><i class="Hui-iconfont">&#xe616;</i>学生统计<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a data-href="people.html" data-title="学生情况统计" href="javascript:void(0)">学生情况统计</a></li>
+                    <li><a data-href="tongji.html" data-title="学生情况统计" href="javascript:void(0)">学生情况统计</a></li>
                 </ul>
             </dd>
         </dl>
