--- a/templates/admain.html
+++ b/templates/admain.html
@@ -79,6 +79,9 @@
                     <li><a data-href="changestudentinformation.html" data-title="编辑学生信息" href="javascript:void(0)">编辑学生信息</a></li>
                 </ul>
                 <ul>
+                    <li><a data-href="lookoldstudentinformation.html" data-title="查看历史学生基本信息" href="javascript:void(0)">查看历史学生基本信息</a></li>
+                </ul>
+                <ul>
                     <li><a data-href="lookstudentgrade.html" data-title="查看学生成绩" href="javascript:void(0)">查看学生成绩</a></li>
                 </ul>
                 <ul>
